[package]
name = "rustgrok"
version = "0.1.0"
edition = "2021"
default-run = "server"

[features]
ingress = []
deployed = []

[dependencies]
clap = { version = "4.2.1", features = ["env", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_24"] }
kube = { version = "0.82.2", default-features = false, features = [
  "client",
  "rustls-tls",
] }
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
reqwest = "0.11.18"
