[package]
name = "rustgrok"
version = "0.1.0"
edition = "2018"
default-run = "server"

[features]
ingress = []
deployed = []

[dependencies]
clap = { version = "4.2", features = ["env", "derive"] }
k8s-openapi = { version = "0.18", features = ["v1_24"] }
kube = { version = "0.82", default-features = false, features = [
  "client",
  "rustls-tls",
] }
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.27", features = ["full", "tracing"] }
futures = "0"
regex = "1.8"
tracing = "0"
tracing-subscriber = "0"
console-subscriber = "0.2"

[dev-dependencies]
reqwest = "0.11"
